--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "^5.3.0",
     "colors": "^1.4.0",
     "concurrently": "^8.2.0",
+    "cookie-parse": "^0.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
