--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@ DEV = iuhouihojholj
 mogo = mongodb+srv://rghuser:hemendragour@atlascluster.hoiklni.mongodb.net/Rgh
 JWT_SECRET = DJKFDUIHF72835RHWEKFH9834
 
-
+BRAINTREE_MERCHANT_ID = 6fkmfg9mhw7zk9sq
+BRAINTREE_PUBLIC_KEY = 8tjpths4zf8hpg9x
+BRAINTREE_PRIVATE_KEY = 61a36e83a5be18a575f9c3a490c755e8
 
 
 
