--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bcrypt": "^5.1.0",
+    "braintree": "^3.22.0",
+    "braintree-web-drop-in-react": "^1.2.1",
     "chalk": "^5.3.0",
     "colors": "^1.4.0",
     "concurrently": "^8.2.0",
@@ -26,6 +28,7 @@
     "express-formidable": "^1.2.0",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.30.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
